add Landing, Portfolio sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
-import Header from '~/components/Header';
 import Layout from '../layouts/Layout.astro';
+import Landing from '~/components/widgets/Landing.svelte';
+import Portfolio from '~/components/widgets/Portfolio.svelte';
 ---
 
-<Layout title="Welcome to Astro.">
-	<main></main>
+<Layout title="2023 ASM website.">
+	<main>
+		<Landing />
+		<Portfolio />
+	
+	</main>
+	<style></style>
 </Layout>
-
-<style></style>
