--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import Header from '~/components/Header.svelte';
+import '../assets/globals.css';
+import Fonts from '~/components/atoms/Fonts.astro';
 export interface Props {
 	title: string;
 }
@@ -13,10 +16,11 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<Fonts />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="bg-slate-50">
+		<Header />
 		<slot />
-	</body>
+	</body><style></style>
 </html>
-<style></style>
