add About section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,15 @@
 import Layout from '../layouts/Layout.astro';
 import Landing from '~/components/widgets/Landing.svelte';
 import Portfolio from '~/components/widgets/Portfolio.svelte';
+import About from '~/components/widgets/About.svelte';
 ---
 
 <Layout title="2023 ASM website.">
 	<main>
 		<Landing />
 		<Portfolio />
-	
+			<About client:visible />
+		
 	</main>
 	<style></style>
 </Layout>
