add gsap and ScrollTrigger

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,8 @@ import About from '~/components/widgets/About.svelte';
 	<main>
 		<Landing />
 		<Portfolio />
-			<About client:visible />
+		<About client:visible />
+		<Landing />
 		
 	</main>
 	<style></style>
